# FabriqueTest

./: .dockerignore  .env-template  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  openapi-schema.yaml  pyproject.toml  requirements.txt  run.sh
backend/: env.py  settings.py  urls.py  utils.py
poll/: models.py  serializers.py  views.py
poll/migrations/: 0001_initial.py  0002_auto_20210618_1252.py  0003_auto_20210618_1313.py
